objects/fcio1__QueueParticipant__c.object
<CustomObject>
    <fields>
        <fullName>fcio1__Account_Role__c</fullName>
        <label>Account Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Agent_Logged_In_del__c</fullName>
        <formula>IF(ISBLANK( fcio1__User__c ), FALSE, IF( fcio1__Routing_Queues__r.fcio1__UseAgentLogin__c ,   !fcio1__User__r.fcio1__Agent_Logged_In__c  , FALSE))</formula>
        <label>Agent Logged Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__AssignedCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AssignedCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__DailyCounter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of leads assigned today - starting from 00:01 to 23:59</description>
        <label>DailyCounter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Daily_Limit_Reached__c</fullName>
        <formula>AND(  fcio1__DailyCounter__c  &gt;=  fcio1__Daily_Limit__c , NOT(ISBLANK( fcio1__Daily_Limit__c )),LEFT(TEXT(NOW()),10) = LEFT(TEXT( fcio1__Last_Punched_Time__c ),10))</formula>
        <label>Daily Limit Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Daily_Limit__c</fullName>
        <label>Daily Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Disqualified__c</fullName>
        <formula>OR( fcio1__isUserActive__c, AND(NOW()&gt; fcio1__VacationStart__c, NOW() &lt;  fcio1__VacationEnd__c ),AND(NOW()&gt; fcio1__User__r.fcio1__Vacation_Start_Date__c, NOW() &lt;  fcio1__User__r.fcio1__Vacation_End_Date__c ), NOT( fcio1__Participating__c ),   fcio1__Queue_Limit_Reached__c  ,  fcio1__Personal_Limit_Reached__c  , fcio1__Daily_Limit_Reached__c ,  fcio1__Hourly_Limit_Reached__c ,  fcio1__Weekly_Limit_Reached__c , fcio1__Agent_Logged_In_del__c  )</formula>
        <label>Disqualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__HourlyCounter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of objects assigned in the current hour. Hour always start from 0-59 mins.</description>
        <label>HourlyCounter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__HourlyLimit__c</fullName>
        <label>HourlyLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Hourly_Limit_Reached__c</fullName>
        <formula>AND(  fcio1__HourlyCounter__c  &gt;=  fcio1__HourlyLimit__c , NOT(ISBLANK( fcio1__HourlyLimit__c )), LEFT(TEXT(NOW()),13) = LEFT(TEXT( fcio1__Last_Punched_Time__c ),13))</formula>
        <label>Hourly Limit Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Last_Punched_Time__c</fullName>
        <label>Last Punched Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__Participating__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Participating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Personal_Limit_Reached__c</fullName>
        <formula>AND(NOT(ISBLANK(fcio1__Personal_Limit__c)), fcio1__AssignedCount__c &gt;= fcio1__Personal_Limit__c)</formula>
        <label>Personal Limit Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Personal_Limit__c</fullName>
        <label>Personal Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Queue_Limit_Reached__c</fullName>
        <formula>AND(fcio1__Routing_Queues__r.fcio1__Limit__c &gt; 0,  (fcio1__AssignedCount__c &gt;= fcio1__Routing_Queues__r.fcio1__Limit__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue Limit Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Routing_Queues__c</fullName>
        <label>Routing Queues</label>
        <referenceTo>fcio1__RoutingQueues__c</referenceTo>
        <relationshipName>Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fcio1__Skills__c</fullName>
        <description>A comma separated list of skills that is used to route objects requiring this skill.</description>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__TerritoryRouting_RoleFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TerritoryRouting RoleFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Total_Count__c</fullName>
        <label>Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__UserId__c</fullName>
        <formula>fcio1__User__r.Id</formula>
        <label>UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcio1__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fcio1__VacationEnd__c</fullName>
        <label>VacationEnd</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__VacationStart__c</fullName>
        <label>VacationStart</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fcio1__Weekly_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weekly Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Weekly_Limit_Reached__c</fullName>
        <formula>AND( fcio1__Weekly_Counter__c &gt;=  fcio1__Weekly_Limit__c, NOT(ISBLANK(fcio1__Weekly_Limit__c)),(CEILING( ( DATEVALUE(Now()) - DATE( YEAR( DATEVALUE(Now() )), 1, 1) + 1) / 7))=(CEILING( ( DATEVALUE(fcio1__Last_Punched_Time__c) - DATE( YEAR( DATEVALUE(fcio1__Last_Punched_Time__c )), 1, 1) + 1) / 7)))</formula>
        <label>Weekly Limit Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fcio1__Weekly_Limit__c</fullName>
        <label>Weekly Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__Weightage__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Weightage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fcio1__isUserActive__c</fullName>
        <formula>IF(ISBLANK( fcio1__User__c), FALSE, NOT(fcio1__User__r.IsActive))</formula>
        <label>User Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Fullcast Queue Participant</label>
    <listViews>
        <fullName>fcio1__All</fullName>
        <columns>NAME</columns>
        <columns>fcio1__AssignedCount__c</columns>
        <columns>fcio1__Participating__c</columns>
        <columns>fcio1__isUserActive__c</columns>
        <columns>fcio1__Last_Punched_Time__c</columns>
        <columns>fcio1__Skills__c</columns>
        <columns>fcio1__Tags__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>fcio1__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Participant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fullcast Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>fcio1__Role_and_User_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 

AND((ISBLANK(fcio1__User__c)), 
(ISBLANK( fcio1__Account_Role__c ))
)

,
AND(
NOT(ISBLANK(fcio1__User__c)), 
NOT(ISBLANK( fcio1__Account_Role__c ))
)
)</errorConditionFormula>
        <errorMessage>Either the User or the Role needs to be filled in. Both cannot be Empty and Both cannot be filled in.</errorMessage>
    </validationRules>
</CustomObject>